tests/error/poly_errors_py312/prev_param_in_bound1.py
from guppylang.decorator import guppy
from guppylang.std.lang import Copy, Drop


@guppy
def main[T: (Copy, Drop), x: T]() -> None:
    ...


guppy.compile(main)
