tests/error/poly_errors_py312/prev_param_in_bound1.err
Error: Variable not defined (at $FILE:6:29)
  | 
4 | 
5 | @guppy
6 | def main[T: (Copy, Drop), x: T]() -> None:
  |                              ^ `T` is not defined

Guppy compilation failed due to 1 previous error
